done 029-how-to-order and footer

--- a/public/011-article.html
+++ b/public/011-article.html
@@ -1089,7 +1089,9 @@
 							<div class="footer__sub-row row gy-xl-0">
 								<div class="col col-lg-12">
 									<div class="footer__tells"><a class="footer__tell" href="tel:+78007758272">+7 (800) 775-82-72</a><a class="footer__tell" href="tel:+74957758272">+7 (495) 775-82-72</a>
-									</div><a class="footer__callback-btn link-modal-js" href="#modal-call">Заказать звонок</a>
+									</div>
+									<div class="footer__btn-wrap"><a class="footer__callback-btn link-modal-js" href="#modal-call">Заказать звонок</a><a class="footer__registartion-btn" href="#">регистрация</a>
+									</div>
 									<div class="footer__mail-cont"><a class="footer__mail" href="mailto:shop@kitchenmania.ru">shop@kitchenmania.ru</a>
 									</div>
 								</div>
@@ -1159,7 +1161,7 @@
 									<li><a href="#">Мелкая кухонная техника</a></li>
 									<li><a href="#">Сантехника для кухни</a></li>
 								</ul>
-							</div><a class="footer__creator-logo" href="#"><span class="footer__cr-img"><img laoding="lazy" src="img/svg/creator-logo.svg" alt=""/></span><span class="footer__cr-txt">Разработка сайта</span></a>
+							</div>
 						</div>
 					</div>
 					<div class="footer__bot">
