--- a/public/029-how-to-order.html
+++ b/public/029-how-to-order.html
@@ -795,6 +795,145 @@
 				</div>
 			</section>
 			<!-- end sStepsToOrder-->
+			<!-- start sWayToContact-->
+			<section class="sWayToContact section" id="sWayToContact">
+				<div class="old-way"> 
+					<div class="container">
+						<div class="old-way__cards">
+							<div class="old-way__card">
+								<div class="old-way__icon-wrap"> 
+									<svg class="icon icon-email ">
+										<use xlink:href="img/svg/sprite.svg#email"></use>
+									</svg>
+								</div>
+								<h2>По&nbsp;электронной почте</h2>
+								<div class="old-way__content">
+									<p>Напишите нам письмо</p><a href="mailto:shop@kitchenmania.ru">shop@kitchenmania.ru</a>
+								</div>
+							</div>
+							<div class="old-way__card">
+								<div class="old-way__icon-wrap"> 
+									<svg class="icon icon-call ">
+										<use xlink:href="img/svg/sprite.svg#call"></use>
+									</svg>
+								</div>
+								<h2>По&nbsp;телефону</h2>
+								<div class="old-way__content">
+									<p>Позвоните нам на&nbsp;бесплатную линию</p><a href="tel:+88007758272">8 (800) 775-82-72</a>
+								</div>
+							</div>
+							<div class="old-way__card">
+								<div class="old-way__icon-wrap"> 
+									<svg class="icon icon-income-call ">
+										<use xlink:href="img/svg/sprite.svg#income-call"></use>
+									</svg>
+								</div>
+								<h2>Заказ обратного звонка</h2>
+								<div class="old-way__content">
+									<p>В&nbsp;верхней части страницы сайта под номером телефона нажмите <a href="#">&laquo;Заказать звонок&raquo;</a>, заполните обязательные поля, и&nbsp;менеджер моментально вам перезвонит</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="modern-way bg-wrap">
+					<!-- picture-->
+					<picture class="picture-bg"> 
+						<source type="image/avif" srcset="img/@2x/avif/dark-bg.avif"/>
+						<source type="image/webp" srcset="img/@2x/webp/dark-bg.webp"/><img class="object-fit-js" src="img/@2x/dark-bg.jpg" alt="" loading="lazy"/>
+					</picture>
+					<!-- /picture-->
+					<div class="container">
+						<div class="modern-way__cards">
+							<div class="modern-way__card">
+								<div class="modern-way__icon-wrap"> 
+									<svg class="icon icon-chart ">
+										<use xlink:href="img/svg/sprite.svg#chart"></use>
+									</svg>
+								</div>
+								<h2>В&nbsp;чате на&nbsp;сайте</h2>
+								<div class="modern-way__content">
+									<p>Нажмите на&nbsp;пиктограмму чата в&nbsp;правом нижнем углу сайта и&nbsp;напишите нам.</p>
+								</div>
+							</div>
+							<div class="modern-way__card modern-way__card--social">
+								<div class="modern-way__icon-list">
+									<div class="modern-way__icon-wrap"> 
+										<svg class="icon icon-whatsapp ">
+											<use xlink:href="img/svg/sprite.svg#whatsapp"></use>
+										</svg>
+									</div>
+									<div class="modern-way__icon-wrap">
+										<svg class="icon icon-telegram ">
+											<use xlink:href="img/svg/sprite.svg#telegram"></use>
+										</svg>
+									</div>
+								</div>
+								<h2>Через мессенджеры</h2>
+								<div class="modern-way__content">
+									<div class="modern-way__social">
+										<h5>WhatsApp</h5><a href="tel+79001121212">+7 900 112 12 12</a>
+									</div>
+									<div class="modern-way__social">
+										<h5>Telegram</h5><a href="tel+79001121212">+7 900 112 12 12</a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- end sWayToContact-->
+			<!-- start sForm-->
+			<section class="sForm section">
+				<div class="container">
+					<div class="sForm__box bg-wrap">
+						<!-- picture-->
+						<picture class="picture-bg"> 
+							<source type="image/avif" srcset="img/@2x/avif/dark-bg.avif"/>
+							<source type="image/webp" srcset="img/@2x/webp/dark-bg.webp"/><img class="object-fit-js" src="img/@2x/dark-bg.png" alt="" loading="lazy"/>
+						</picture>
+						<!-- /picture-->
+						<div class="section-title">
+							<h2>Хотите связаться с нами и что-то предложить?</h2>
+							<p>Заполните форму обратной связи, напишите ваше мнение. Мы ответим вам на указанную почту</p>
+						</div>
+						<div class="form-wrap">
+							<form>
+								<div class="form-wrap__row row">
+									<div class="form-wrap__left-col col-lg-auto">
+										<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="text" type="text" placeholder="Ваше имя"/>
+										</div>
+										<!-- +e.input-wrap-->
+										<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="email" type="email" placeholder="Ваша электронная почта"/>
+										</div>
+										<!-- +e.input-wrap-->
+									</div>
+									<div class="col-lg">
+										<div class="form-wrap__input-wrap form-group"><textarea class="form-wrap__input form-control" name="textarea" placeholder="Ваш комментарий"></textarea>
+										</div>
+										<!-- +e.input-wrap-->
+									</div>
+									<div class="col-12 m-0"></div>
+									<div class="form-wrap__left-col col-lg-auto">
+										<button class="form-wrap__btn" type="submit">написать нам
+										</button>
+									</div>
+									<div class="col-lg">
+										<div class="form-wrap__policy">
+											<div class="form-wrap__p-txt">
+												Мы безопасно храним данные и никому их не передаём, вот
+												<a href="#">условия.</a>
+											</div>
+										</div>
+									</div>
+								</div>
+							</form>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- end sForm-->
 			<footer class="footer footer-dd-items-js">
 				<div class="footer__bg"><img loading="lazy" src="img/@2x/sAbout-bg.png" alt=""/>
 				</div>
@@ -804,7 +943,9 @@
 							<div class="footer__sub-row row gy-xl-0">
 								<div class="col col-lg-12">
 									<div class="footer__tells"><a class="footer__tell" href="tel:+78007758272">+7 (800) 775-82-72</a><a class="footer__tell" href="tel:+74957758272">+7 (495) 775-82-72</a>
-									</div><a class="footer__callback-btn link-modal-js" href="#modal-call">Заказать звонок</a>
+									</div>
+									<div class="footer__btn-wrap"><a class="footer__callback-btn link-modal-js" href="#modal-call">Заказать звонок</a><a class="footer__registartion-btn" href="#">регистрация</a>
+									</div>
 									<div class="footer__mail-cont"><a class="footer__mail" href="mailto:shop@kitchenmania.ru">shop@kitchenmania.ru</a>
 									</div>
 								</div>
@@ -874,7 +1015,7 @@
 									<li><a href="#">Мелкая кухонная техника</a></li>
 									<li><a href="#">Сантехника для кухни</a></li>
 								</ul>
-							</div><a class="footer__creator-logo" href="#"><span class="footer__cr-img"><img laoding="lazy" src="img/svg/creator-logo.svg" alt=""/></span><span class="footer__cr-txt">Разработка сайта</span></a>
+							</div>
 						</div>
 					</div>
 					<div class="footer__bot">
