--- a/public/023-service-center.html
+++ b/public/023-service-center.html
@@ -789,7 +789,7 @@
 										<svg class="icon icon-phone ">
 											<use xlink:href="img/svg/sprite.svg#phone"></use>
 										</svg>
-										<h5>Телефон &laquo;горячей линии&raquo; AEG</h5><a class="sServicesList__number" href="tel:+88004444448">8 (800) 444-444-8</a>
+										<h5>Телефон &laquo;горячей линии&raquo; AEG</h5><a class="sServicesList__number" href="tel:88004444448">8 (800) 444-444-8</a>
 									</div>
 								</div>
 							</div>
@@ -813,7 +813,7 @@
 										<svg class="icon icon-phone ">
 											<use xlink:href="img/svg/sprite.svg#phone"></use>
 										</svg>
-										<h5>Телефон &laquo;горячей линии&raquo; Asko</h5><a class="sServicesList__number" href="tel:+88007070807">8 (800) 707-08-07</a>
+										<h5>Телефон &laquo;горячей линии&raquo; Asko</h5><a class="sServicesList__number" href="tel:88007070807">8 (800) 707-08-07</a>
 									</div>
 								</div>
 							</div>
@@ -864,7 +864,7 @@
 											<use xlink:href="img/svg/sprite.svg#phone"></use>
 										</svg>
 										<h5>Телефон &laquo;горячей линии&raquo; Dometic</h5>
-										<div class="sServicesList__number-wrap"><a class="sServicesList__number" href="tel:+84957807939">8 (495) 780-79-39</a>
+										<div class="sServicesList__number-wrap"><a class="sServicesList__number" href="tel:84957807939">8 (495) 780-79-39</a>
 										</div>
 									</div>
 								</div>
