--- a/public/025-equipment-storage.html
+++ b/public/025-equipment-storage.html
@@ -746,8 +746,8 @@
 						<div class="col col-xl-4">
 							<!-- picture-->
 							<picture> 
-								<source type="image/avif" srcset="img/@2x/avif/equipmentSstorageBody-bg.avif"/>
-								<source type="image/webp" srcset="img/@2x/webp/equipmentSstorageBody-bg.webp"/><img class="object-fit-js" src="img/@2x/equipmentSstorageBody-bg.png" alt="" loading="lazy"/>
+								<source type="image/avif" srcset="img/@2x/avif/equipment-bg.avif"/>
+								<source type="image/webp" srcset="img/@2x/webp/equipment-bg.webp"/><img class="object-fit-js" src="img/@2x/equipment-bg.png" alt="" loading="lazy"/>
 							</picture>
 							<!-- /picture-->
 						</div>
