--- a/public/029-how-to-order.html
+++ b/public/029-how-to-order.html
@@ -760,7 +760,7 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-lg-6 col-xl-8">
+						<div class="col-lg-8">
 							<div class="sStepsToOrder__list">
 								<svg class="icon icon-arrow-clockwise ">
 									<use xlink:href="img/svg/sprite.svg#arrow-clockwise"></use>
@@ -783,7 +783,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-lg-6 col-xl-4 bg-wrap">
+						<div class="sStepsToOrder__img-col col-lg-4 bg-wrap">
 							<!-- picture-->
 							<picture class="picture-bg"> 
 								<source type="image/avif" srcset="img/@2x/avif/sStepsToOrder-bg.avif"/>
