--- a/public/031-certificates.html
+++ b/public/031-certificates.html
@@ -744,7 +744,7 @@
 					<div class="row"> 
 						<div class="col-lg-6"> 
 							<div class="sCertificatesHead__offer">
-								<h1>Гарантия качества</h1>
+								<h2>Гарантия качества</h2>
 								<p>
 									 Клиенты нашего салона не&nbsp;сомневаются в&nbsp;качестве приобретаемой
 									продукции, так как о&nbsp;нем свидетельствуют сертификаты, выданные 
@@ -811,88 +811,43 @@
 				<div class="container">
 					<div class="section-title">
 						<div class="row">
-								<div class="section-title__col col-lg-6">
-									<div class="certificateEl">
-										<div class="certificateEl__w">
-											<!-- picture-->
-											<picture> 
-												<source type="image/avif" srcset="img/@2x/avif/certificateEl-1.avif" media="(min-width:576px)"/>
-												<source type="image/avif" srcset="img/@1x/avif/certificateEl-1.avif"/>
-												<source type="image/webp" srcset="img/@2x/webp/certificateEl-1.webp" media="(min-width:576px)"/>
-												<source type="image/webp" srcset="img/@1x/webp/certificateEl-1.webp"/>
-												<source type="image/jpg" srcset="img/@2x/avif/certificateEl-1.jpg" media="(min-width:576px)"/>
-												<source type="image/jpg" srcset="img/@1x/avif/certificateEl-1.jpg"/><img src="img/@2x/certificateEl-1.jpg" alt="" loading="lazy"/>
-											</picture>
-											<!-- /picture-->
-											<div class="certificateEl__t"> 
-												<p>Сертификат официального дилера Kuppersbusch</p>
-											</div>
-										</div>
-									</div>
+								<div class="section-title__col col-lg-6"><a class="certificateEl" data-fancybox="sert" href="img/@2x/certificateEl-1.jpg"> <span class="certificateEl__img-wrap">
+									<!-- picture-->
+									<picture> 
+										<source type="image/avif" srcset="img/@2x/avif/certificateEl-1.avif"/>
+										<source type="image/webp" srcset="img/@2x/webp/certificateEl-1.webp"/><img src="img/@2x/certificateEl-1.jpg" alt="" loading="lazy"/>
+									</picture>
+									<!-- /picture--></span><span class="certificateEl__t">Сертификат официального дилера Kuppersbusch</span></a>
 								</div>
-								<div class="section-title__col col-lg-6">
-									<div class="certificateEl">
-										<div class="certificateEl__w">
-											<!-- picture-->
-											<picture> 
-												<source type="image/avif" srcset="img/@2x/avif/certificateEl-2.avif" media="(min-width:576px)"/>
-												<source type="image/avif" srcset="img/@1x/avif/certificateEl-2.avif"/>
-												<source type="image/webp" srcset="img/@2x/webp/certificateEl-2.webp" media="(min-width:576px)"/>
-												<source type="image/webp" srcset="img/@1x/webp/certificateEl-2.webp"/>
-												<source type="image/jpg" srcset="img/@2x/avif/certificateEl-2.jpg" media="(min-width:576px)"/>
-												<source type="image/jpg" srcset="img/@1x/avif/certificateEl-2.jpg"/><img src="img/@2x/certificateEl-2.jpg" alt="" loading="lazy"/>
-											</picture>
-											<!-- /picture-->
-											<div class="certificateEl__t"> 
-												<p>Сертификат официального дилера Brandt</p>
-											</div>
-										</div>
-									</div>
+								<div class="section-title__col col-lg-6"><a class="certificateEl" data-fancybox="sert" href="img/@2x/certificateEl-2.jpg"> <span class="certificateEl__img-wrap">
+									<!-- picture-->
+									<picture> 
+										<source type="image/avif" srcset="img/@2x/avif/certificateEl-2.avif"/>
+										<source type="image/webp" srcset="img/@2x/webp/certificateEl-2.webp"/><img src="img/@2x/certificateEl-2.jpg" alt="" loading="lazy"/>
+									</picture>
+									<!-- /picture--></span><span class="certificateEl__t">Сертификат официального дилера Brandt</span></a>
 								</div>
-								<div class="section-title__col col-lg-6">
-									<div class="certificateEl">
-										<div class="certificateEl__w">
-											<!-- picture-->
-											<picture> 
-												<source type="image/avif" srcset="img/@2x/avif/certificateEl-3.avif" media="(min-width:576px)"/>
-												<source type="image/avif" srcset="img/@1x/avif/certificateEl-3.avif"/>
-												<source type="image/webp" srcset="img/@2x/webp/certificateEl-3.webp" media="(min-width:576px)"/>
-												<source type="image/webp" srcset="img/@1x/webp/certificateEl-3.webp"/>
-												<source type="image/jpg" srcset="img/@2x/avif/certificateEl-3.jpg" media="(min-width:576px)"/>
-												<source type="image/jpg" srcset="img/@1x/avif/certificateEl-3.jpg"/><img src="img/@2x/certificateEl-3.jpg" alt="" loading="lazy"/>
-											</picture>
-											<!-- /picture-->
-											<div class="certificateEl__t"> 
-												<p>Сертификат официального дилера Kuppersbusch</p>
-											</div>
-										</div>
-									</div>
+								<div class="section-title__col col-lg-6"><a class="certificateEl" data-fancybox="sert" href="img/@2x/certificateEl-3.jpg"> <span class="certificateEl__img-wrap">
+									<!-- picture-->
+									<picture> 
+										<source type="image/avif" srcset="img/@2x/avif/certificateEl-3.avif"/>
+										<source type="image/webp" srcset="img/@2x/webp/certificateEl-3.webp"/><img src="img/@2x/certificateEl-3.jpg" alt="" loading="lazy"/>
+									</picture>
+									<!-- /picture--></span><span class="certificateEl__t">Сертификат официального дилера Kuppersbusch</span></a>
 								</div>
-								<div class="section-title__col col-lg-6">
-									<div class="certificateEl">
-										<div class="certificateEl__w">
-											<!-- picture-->
-											<picture> 
-												<source type="image/avif" srcset="img/@2x/avif/certificateEl-4.avif" media="(min-width:576px)"/>
-												<source type="image/avif" srcset="img/@1x/avif/certificateEl-4.avif"/>
-												<source type="image/webp" srcset="img/@2x/webp/certificateEl-4.webp" media="(min-width:576px)"/>
-												<source type="image/webp" srcset="img/@1x/webp/certificateEl-4.webp"/>
-												<source type="image/jpg" srcset="img/@2x/avif/certificateEl-4.jpg" media="(min-width:576px)"/>
-												<source type="image/jpg" srcset="img/@1x/avif/certificateEl-4.jpg"/><img src="img/@2x/certificateEl-4.jpg" alt="" loading="lazy"/>
-											</picture>
-											<!-- /picture-->
-											<div class="certificateEl__t"> 
-												<p>Сертификат официального дилера Brandt</p>
-											</div>
-										</div>
-									</div>
+								<div class="section-title__col col-lg-6"><a class="certificateEl" data-fancybox="sert" href="img/@2x/certificateEl-4.jpg"> <span class="certificateEl__img-wrap">
+									<!-- picture-->
+									<picture> 
+										<source type="image/avif" srcset="img/@2x/avif/certificateEl-4.avif"/>
+										<source type="image/webp" srcset="img/@2x/webp/certificateEl-4.webp"/><img src="img/@2x/certificateEl-4.jpg" alt="" loading="lazy"/>
+									</picture>
+									<!-- /picture--></span><span class="certificateEl__t">Сертификат официального дилера Brandt</span></a>
 								</div>
 						</div>
 						<div class="row"> 
 							<div class="col"> 
 								<div class="section-title__btn">
-									<button class="catalog-btn" type="button">
-										<p>показать еще</p>
+									<button class="catalog-btn" type="button"> показать еще
 									</button>
 								</div>
 							</div>
