--- a/public/022-connection-of-equipment.html
+++ b/public/022-connection-of-equipment.html
@@ -722,12 +722,10 @@
 			<section class="sConnectionHead bg-wrap" id="sConnectionHead">
 				<!-- picture-->
 				<picture class="picture-bg"> 
-					<source type="image/avif" srcset="img/@2x/avif/сonnectionHead-bg.avif" media="(min-width:576px)"/>
-					<source type="image/avif" srcset="img/@1x/avif/сonnectionHead-bg.avif"/>
 					<source type="image/webp" srcset="img/@2x/webp/сonnectionHead-bg.webp" media="(min-width:576px)"/>
 					<source type="image/webp" srcset="img/@1x/webp/сonnectionHead-bg.webp"/>
-					<source type="image/jpg" srcset="img/@2x/avif/сonnectionHead-bg.jpg" media="(min-width:576px)"/>
-					<source type="image/jpg" srcset="img/@1x/avif/сonnectionHead-bg.jpg"/><img class="object-fit-js" src="img/@2x/сonnectionHead-bg.jpg" alt="" loading="lazy"/>
+					<source type="image/jpg" srcset="img/@2x/сonnectionHead-bg.jpg" media="(min-width:576px)"/>
+					<source type="image/jpg" srcset="img/@1x/сonnectionHead-bg.jpg"/><img class="object-fit-js" src="img/@2x/сonnectionHead-bg.jpg" alt="" loading="lazy"/>
 				</picture>
 				<!-- /picture-->
 				<div class="container">
@@ -741,12 +739,10 @@
 			<div class="sWhatWeDo section bg-wrap" id="sWhatWeDo">
 				<!-- picture-->
 				<picture class="picture-bg"> 
-					<source type="image/avif" srcset="img/@2x/avif/dark-bg.avif" media="(min-width:576px)"/>
-					<source type="image/avif" srcset="img/@1x/avif/dark-bg.avif"/>
 					<source type="image/webp" srcset="img/@2x/webp/dark-bg.webp" media="(min-width:576px)"/>
 					<source type="image/webp" srcset="img/@1x/webp/dark-bg.webp"/>
-					<source type="image/jpg" srcset="img/@2x/avif/dark-bg.jpg" media="(min-width:576px)"/>
-					<source type="image/jpg" srcset="img/@1x/avif/dark-bg.jpg"/><img class="object-fit-js" src="img/@2x/dark-bg.jpg" alt="" loading="lazy"/>
+					<source type="image/jpg" srcset="img/@2x/dark-bg.jpg" media="(min-width:576px)"/>
+					<source type="image/jpg" srcset="img/@1x/dark-bg.jpg"/><img class="object-fit-js" src="img/@2x/dark-bg.jpg" alt="" loading="lazy"/>
 				</picture>
 				<!-- /picture-->
 				<div class="container">
@@ -755,12 +751,10 @@
 							<div class="whatWeDoCard">
 								<!-- picture-->
 								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/whatWeDoCard-1.avif" media="(min-width:576px)"/>
-									<source type="image/avif" srcset="img/@1x/avif/whatWeDoCard-1.avif"/>
 									<source type="image/webp" srcset="img/@2x/webp/whatWeDoCard-1.webp" media="(min-width:576px)"/>
 									<source type="image/webp" srcset="img/@1x/webp/whatWeDoCard-1.webp"/>
-									<source type="image/jpg" srcset="img/@2x/avif/whatWeDoCard-1.jpg" media="(min-width:576px)"/>
-									<source type="image/jpg" srcset="img/@1x/avif/whatWeDoCard-1.jpg"/><img src="img/@2x/whatWeDoCard-1.jpg" alt="" loading="lazy"/>
+									<source type="image/jpg" srcset="img/@2x/whatWeDoCard-1.jpg" media="(min-width:576px)"/>
+									<source type="image/jpg" srcset="img/@1x/whatWeDoCard-1.jpg"/><img src="img/@2x/whatWeDoCard-1.jpg" alt="" loading="lazy"/>
 								</picture>
 								<!-- /picture-->
 								<div class="whatWeDoCard__text-wrap">
@@ -777,12 +771,10 @@
 							<div class="whatWeDoCard">
 								<!-- picture-->
 								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/whatWeDoCard-2.avif" media="(min-width:576px)"/>
-									<source type="image/avif" srcset="img/@1x/avif/whatWeDoCard-2.avif"/>
 									<source type="image/webp" srcset="img/@2x/webp/whatWeDoCard-2.webp" media="(min-width:576px)"/>
 									<source type="image/webp" srcset="img/@1x/webp/whatWeDoCard-2.webp"/>
-									<source type="image/jpg" srcset="img/@2x/avif/whatWeDoCard-2.jpg" media="(min-width:576px)"/>
-									<source type="image/jpg" srcset="img/@1x/avif/whatWeDoCard-2.jpg"/><img src="img/@2x/whatWeDoCard-2.jpg" alt="" loading="lazy"/>
+									<source type="image/jpg" srcset="img/@2x/whatWeDoCard-2.jpg" media="(min-width:576px)"/>
+									<source type="image/jpg" srcset="img/@1x/whatWeDoCard-2.jpg"/><img src="img/@2x/whatWeDoCard-2.jpg" alt="" loading="lazy"/>
 								</picture>
 								<!-- /picture-->
 								<div class="whatWeDoCard__text-wrap">
@@ -811,12 +803,10 @@
 							<div class="sDisposal__card">
 								<!-- picture-->
 								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/disposal-bg.avif" media="(min-width:576px)"/>
-									<source type="image/avif" srcset="img/@1x/avif/disposal-bg.avif"/>
 									<source type="image/webp" srcset="img/@2x/webp/disposal-bg.webp" media="(min-width:576px)"/>
 									<source type="image/webp" srcset="img/@1x/webp/disposal-bg.webp"/>
-									<source type="image/jpg" srcset="img/@2x/avif/disposal-bg.jpg" media="(min-width:576px)"/>
-									<source type="image/jpg" srcset="img/@1x/avif/disposal-bg.jpg"/><img class="object-fit-js" src="img/@2x/disposal-bg.jpg" alt="" loading="lazy"/>
+									<source type="image/jpg" srcset="img/@2x/disposal-bg.jpg" media="(min-width:576px)"/>
+									<source type="image/jpg" srcset="img/@1x/disposal-bg.jpg"/><img class="object-fit-js" src="img/@2x/disposal-bg.jpg" alt="" loading="lazy"/>
 								</picture>
 								<!-- /picture-->
 								<div class="sDisposal__wrap">
@@ -855,7 +845,6 @@
 					<div class="sForm__box bg-wrap">
 						<!-- picture-->
 						<picture class="picture-bg"> 
-							<source type="image/avif" srcset="img/@2x/avif/dark-bg.avif"/>
 							<source type="image/webp" srcset="img/@2x/webp/dark-bg.webp"/><img class="object-fit-js" src="img/@2x/dark-bg.png" alt="" loading="lazy"/>
 						</picture>
 						<!-- /picture-->
