--- a/public/023-service-center.html
+++ b/public/023-service-center.html
@@ -722,12 +722,10 @@
 			<div class="sServiceCenterHead bg-wrap" id="sServiceCenterHead">
 				<!-- picture-->
 				<picture class="picture-bg"> 
-					<source type="image/avif" srcset="img/@2x/avif/service-center-bg.avif" media="(min-width:576px)"/>
-					<source type="image/avif" srcset="img/@1x/avif/service-center-bg.avif"/>
 					<source type="image/webp" srcset="img/@2x/webp/service-center-bg.webp" media="(min-width:576px)"/>
 					<source type="image/webp" srcset="img/@1x/webp/service-center-bg.webp"/>
-					<source type="image/jpg" srcset="img/@2x/avif/service-center-bg.jpg" media="(min-width:576px)"/>
-					<source type="image/jpg" srcset="img/@1x/avif/service-center-bg.jpg"/><img class="object-fit-js" src="img/@2x/service-center-bg.jpg" alt="" loading="lazy"/>
+					<source type="image/jpg" srcset="img/@2x/service-center-bg.jpg" media="(min-width:576px)"/>
+					<source type="image/jpg" srcset="img/@1x/service-center-bg.jpg"/><img class="object-fit-js" src="img/@2x/service-center-bg.jpg" alt="" loading="lazy"/>
 				</picture>
 				<!-- /picture-->
 				<div class="sServiceCenterHead__inner section">
@@ -760,12 +758,10 @@
 			<div class="sServicesList section bg-wrap" id="sServicesList">
 				<!-- picture-->
 				<picture class="picture-bg"> 
-					<source type="image/avif" srcset="img/@2x/avif/sWhatWeDo-bg.avif" media="(min-width:576px)"/>
-					<source type="image/avif" srcset="img/@1x/avif/sWhatWeDo-bg.avif"/>
 					<source type="image/webp" srcset="img/@2x/webp/sWhatWeDo-bg.webp" media="(min-width:576px)"/>
 					<source type="image/webp" srcset="img/@1x/webp/sWhatWeDo-bg.webp"/>
-					<source type="image/jpg" srcset="img/@2x/avif/sWhatWeDo-bg.jpg" media="(min-width:576px)"/>
-					<source type="image/jpg" srcset="img/@1x/avif/sWhatWeDo-bg.jpg"/><img class="object-fit-js" src="img/@2x/sWhatWeDo-bg.jpg" alt="" loading="lazy"/>
+					<source type="image/jpg" srcset="img/@2x/sWhatWeDo-bg.jpg" media="(min-width:576px)"/>
+					<source type="image/jpg" srcset="img/@1x/sWhatWeDo-bg.jpg"/><img class="object-fit-js" src="img/@2x/sWhatWeDo-bg.jpg" alt="" loading="lazy"/>
 				</picture>
 				<!-- /picture-->
 				<div class="container">
@@ -774,7 +770,6 @@
 							<div class="sServicesList__card sServicesList__card--indent">
 								<!-- picture-->
 								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/servicesCard-bg-1.avif"/>
 									<source type="image/webp" srcset="img/@2x/webp/servicesCard-bg-1.webp"/><img src="img/@2x/servicesCard-bg-1.png" alt="" loading="lazy"/>
 								</picture>
 								<!-- /picture-->
@@ -798,7 +793,6 @@
 							<div class="sServicesList__card">
 								<!-- picture-->
 								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/servicesCard-bg-2.avif"/>
 									<source type="image/webp" srcset="img/@2x/webp/servicesCard-bg-2.webp"/><img src="img/@2x/servicesCard-bg-2.png" alt="" loading="lazy"/>
 								</picture>
 								<!-- /picture-->
@@ -822,7 +816,6 @@
 							<div class="sServicesList__card">
 								<!-- picture-->
 								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/servicesCard-bg-3.avif"/>
 									<source type="image/webp" srcset="img/@2x/webp/servicesCard-bg-3.webp"/><img src="img/@2x/servicesCard-bg-3.png" alt="" loading="lazy"/>
 								</picture>
 								<!-- /picture-->
@@ -848,7 +841,6 @@
 							<div class="sServicesList__card">
 								<!-- picture-->
 								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/servicesCard-bg-4.avif"/>
 									<source type="image/webp" srcset="img/@2x/webp/servicesCard-bg-4.webp"/><img src="img/@2x/servicesCard-bg-4.png" alt="" loading="lazy"/>
 								</picture>
 								<!-- /picture-->
