--- a/public/029-how-to-order.html
+++ b/public/029-how-to-order.html
@@ -722,12 +722,10 @@
 			<section class="sHowToOrderHead section bg-wrap" id="sHowToOrderHead">
 				<!-- picture-->
 				<picture class="picture-bg"> 
-					<source type="image/avif" srcset="img/@2x/avif/сonnectionHead-bg.avif" media="(min-width:576px)"/>
-					<source type="image/avif" srcset="img/@1x/avif/сonnectionHead-bg.avif"/>
 					<source type="image/webp" srcset="img/@2x/webp/сonnectionHead-bg.webp" media="(min-width:576px)"/>
 					<source type="image/webp" srcset="img/@1x/webp/сonnectionHead-bg.webp"/>
-					<source type="image/jpg" srcset="img/@2x/avif/сonnectionHead-bg.jpg" media="(min-width:576px)"/>
-					<source type="image/jpg" srcset="img/@1x/avif/сonnectionHead-bg.jpg"/><img class="object-fit-js" src="img/@2x/сonnectionHead-bg.jpg" alt="" loading="lazy"/>
+					<source type="image/jpg" srcset="img/@2x/сonnectionHead-bg.jpg" media="(min-width:576px)"/>
+					<source type="image/jpg" srcset="img/@1x/сonnectionHead-bg.jpg"/><img class="object-fit-js" src="img/@2x/сonnectionHead-bg.jpg" alt="" loading="lazy"/>
 				</picture>
 				<!-- /picture-->
 				<div class="container">
@@ -747,7 +745,6 @@
 			<section class="sStepsToOrder section bg-wrap" id="sStepsToOrder">
 				<!-- picture-->
 				<picture class="picture-bg"> 
-					<source type="image/avif" srcset="img/@2x/avif/dark-bg.avif"/>
 					<source type="image/webp" srcset="img/@2x/webp/dark-bg.webp"/><img class="object-fit-js" src="img/@2x/dark-bg.jpg" alt="" loading="lazy"/>
 				</picture>
 				<!-- /picture-->
@@ -786,7 +783,6 @@
 						<div class="sStepsToOrder__img-col col-lg-4 bg-wrap">
 							<!-- picture-->
 							<picture class="picture-bg"> 
-								<source type="image/avif" srcset="img/@2x/avif/sStepsToOrder-bg.avif"/>
 								<source type="image/webp" srcset="img/@2x/webp/sStepsToOrder-bg.webp"/><img class="object-fit-js" src="img/@2x/sStepsToOrder-bg.jpg" alt="" loading="lazy"/>
 							</picture>
 							<!-- /picture-->
@@ -839,7 +835,6 @@
 				<div class="modern-way bg-wrap">
 					<!-- picture-->
 					<picture class="picture-bg"> 
-						<source type="image/avif" srcset="img/@2x/avif/dark-bg.avif"/>
 						<source type="image/webp" srcset="img/@2x/webp/dark-bg.webp"/><img class="object-fit-js" src="img/@2x/dark-bg.jpg" alt="" loading="lazy"/>
 					</picture>
 					<!-- /picture-->
@@ -890,7 +885,6 @@
 					<div class="sForm__box bg-wrap">
 						<!-- picture-->
 						<picture class="picture-bg"> 
-							<source type="image/avif" srcset="img/@2x/avif/dark-bg.avif"/>
 							<source type="image/webp" srcset="img/@2x/webp/dark-bg.webp"/><img class="object-fit-js" src="img/@2x/dark-bg.png" alt="" loading="lazy"/>
 						</picture>
 						<!-- /picture-->
