--- a/public/024-contact-information.html
+++ b/public/024-contact-information.html
@@ -794,12 +794,10 @@
 				<div class="sParking__about-parking bg-wrap">
 					<!-- picture-->
 					<picture class="picture-bg"> 
-						<source type="image/avif" srcset="img/@2x/avif/sWhatWeDo-bg.avif" media="(min-width:576px)"/>
-						<source type="image/avif" srcset="img/@1x/avif/sWhatWeDo-bg.avif"/>
 						<source type="image/webp" srcset="img/@2x/webp/sWhatWeDo-bg.webp" media="(min-width:576px)"/>
 						<source type="image/webp" srcset="img/@1x/webp/sWhatWeDo-bg.webp"/>
-						<source type="image/jpg" srcset="img/@2x/avif/sWhatWeDo-bg.jpg" media="(min-width:576px)"/>
-						<source type="image/jpg" srcset="img/@1x/avif/sWhatWeDo-bg.jpg"/><img class="object-fit-js" src="img/@2x/sWhatWeDo-bg.jpg" alt="" loading="lazy"/>
+						<source type="image/jpg" srcset="img/@2x/sWhatWeDo-bg.jpg" media="(min-width:576px)"/>
+						<source type="image/jpg" srcset="img/@1x/sWhatWeDo-bg.jpg"/><img class="object-fit-js" src="img/@2x/sWhatWeDo-bg.jpg" alt="" loading="lazy"/>
 					</picture>
 					<!-- /picture-->
 					<div class="container">
@@ -816,7 +814,6 @@
 				<div class="sParking__image bg-wrap">
 					<!-- picture-->
 					<picture class="picture-bg"> 
-						<source type="image/avif" srcset="img/@2x/avif/parking-bg.avif"/>
 						<source type="image/webp" srcset="img/@2x/webp/parking-bg.webp"/><img class="object-fit-js" src="img/@2x/parking-bg.jpg" alt="" loading="lazy"/>
 					</picture>
 					<!-- /picture-->
@@ -829,7 +826,6 @@
 					<div class="sForm__box bg-wrap">
 						<!-- picture-->
 						<picture class="picture-bg"> 
-							<source type="image/avif" srcset="img/@2x/avif/dark-bg.avif"/>
 							<source type="image/webp" srcset="img/@2x/webp/dark-bg.webp"/><img class="object-fit-js" src="img/@2x/dark-bg.png" alt="" loading="lazy"/>
 						</picture>
 						<!-- /picture-->
