--- a/public/025-equipment-storage.html
+++ b/public/025-equipment-storage.html
@@ -722,12 +722,10 @@
 			<div class="sEquipmentSstorageBody section bg-wrap" id="sEquipmentSstorageBody">
 				<!-- picture-->
 				<picture class="picture-bg"> 
-					<source type="image/avif" srcset="img/@2x/avif/sWhatWeDo-bg.avif" media="(min-width:576px)"/>
-					<source type="image/avif" srcset="img/@1x/avif/sWhatWeDo-bg.avif"/>
 					<source type="image/webp" srcset="img/@2x/webp/sWhatWeDo-bg.webp" media="(min-width:576px)"/>
 					<source type="image/webp" srcset="img/@1x/webp/sWhatWeDo-bg.webp"/>
-					<source type="image/jpg" srcset="img/@2x/avif/sWhatWeDo-bg.jpg" media="(min-width:576px)"/>
-					<source type="image/jpg" srcset="img/@1x/avif/sWhatWeDo-bg.jpg"/><img class="object-fit-js" src="img/@2x/sWhatWeDo-bg.jpg" alt="" loading="lazy"/>
+					<source type="image/jpg" srcset="img/@2x/sWhatWeDo-bg.jpg" media="(min-width:576px)"/>
+					<source type="image/jpg" srcset="img/@1x/sWhatWeDo-bg.jpg"/><img class="object-fit-js" src="img/@2x/sWhatWeDo-bg.jpg" alt="" loading="lazy"/>
 				</picture>
 				<!-- /picture-->
 				<div class="container">
@@ -746,7 +744,6 @@
 						<div class="col col-xl-4">
 							<!-- picture-->
 							<picture> 
-								<source type="image/avif" srcset="img/@2x/avif/equipment-bg.avif"/>
 								<source type="image/webp" srcset="img/@2x/webp/equipment-bg.webp"/><img class="object-fit-js" src="img/@2x/equipment-bg.png" alt="" loading="lazy"/>
 							</picture>
 							<!-- /picture-->
