--- a/public/031-certificates.html
+++ b/public/031-certificates.html
@@ -722,22 +722,18 @@
 			<section class="sCertificatesHead section" id="sCertificatesHead">
 				<!-- picture-->
 				<picture class="picture-bg offer-under"> 
-					<source type="image/avif" srcset="img/@2x/avif/sCertificates-head-1.avif" media="(min-width:576px)"/>
-					<source type="image/avif" srcset="img/@1x/avif/sCertificates-head-1.avif"/>
 					<source type="image/webp" srcset="img/@2x/webp/sCertificates-head-1.webp" media="(min-width:576px)"/>
 					<source type="image/webp" srcset="img/@1x/webp/sCertificates-head-1.webp"/>
-					<source type="image/jpg" srcset="img/@2x/avif/sCertificates-head-1.jpg" media="(min-width:576px)"/>
-					<source type="image/jpg" srcset="img/@1x/avif/sCertificates-head-1.jpg"/><img class="object-fit-js" src="img/@2x/sCertificates-head-1.jpg" alt="" loading="lazy"/>
+					<source type="image/jpg" srcset="img/@2x/sCertificates-head-1.jpg" media="(min-width:576px)"/>
+					<source type="image/jpg" srcset="img/@1x/sCertificates-head-1.jpg"/><img class="object-fit-js" src="img/@2x/sCertificates-head-1.jpg" alt="" loading="lazy"/>
 				</picture>
 				<!-- /picture-->
 				<!-- picture-->
 				<picture class="picture-bg offer-i"> 
-					<source type="image/avif" srcset="img/@2x/avif/sCertificates-head.avif" media="(min-width:576px)"/>
-					<source type="image/avif" srcset="img/@1x/avif/sCertificates-head.avif"/>
 					<source type="image/webp" srcset="img/@2x/webp/sCertificates-head.webp" media="(min-width:576px)"/>
 					<source type="image/webp" srcset="img/@1x/webp/sCertificates-head.webp"/>
-					<source type="image/jpg" srcset="img/@2x/avif/sCertificates-head.jpg" media="(min-width:576px)"/>
-					<source type="image/jpg" srcset="img/@1x/avif/sCertificates-head.jpg"/><img class="object-fit-js" src="img/@2x/sCertificates-head.jpg" alt="" loading="lazy"/>
+					<source type="image/jpg" srcset="img/@2x/sCertificates-head.jpg" media="(min-width:576px)"/>
+					<source type="image/jpg" srcset="img/@1x/sCertificates-head.jpg"/><img class="object-fit-js" src="img/@2x/sCertificates-head.jpg" alt="" loading="lazy"/>
 				</picture>
 				<!-- /picture-->
 				<div class="container">
@@ -799,12 +795,10 @@
 				<div class="sAllCertificates__line"> 
 					<!-- picture-->
 					<picture> 
-						<source type="image/avif" srcset="img/@2x/avif/sCertLine.avif" media="(min-width:576px)"/>
-						<source type="image/avif" srcset="img/@1x/avif/sCertLine.avif"/>
 						<source type="image/webp" srcset="img/@2x/webp/sCertLine.webp" media="(min-width:576px)"/>
 						<source type="image/webp" srcset="img/@1x/webp/sCertLine.webp"/>
-						<source type="image/jpg" srcset="img/@2x/avif/sCertLine.jpg" media="(min-width:576px)"/>
-						<source type="image/jpg" srcset="img/@1x/avif/sCertLine.jpg"/><img class="object-fit-js" src="img/@2x/sCertLine.jpg" alt="" loading="lazy"/>
+						<source type="image/jpg" srcset="img/@2x/sCertLine.jpg" media="(min-width:576px)"/>
+						<source type="image/jpg" srcset="img/@1x/sCertLine.jpg"/><img class="object-fit-js" src="img/@2x/sCertLine.jpg" alt="" loading="lazy"/>
 					</picture>
 					<!-- /picture-->
 				</div>
@@ -814,7 +808,6 @@
 								<div class="section-title__col col-lg-6"><a class="certificateEl" data-fancybox="sert" href="img/@2x/certificateEl-1.jpg"> <span class="certificateEl__img-wrap">
 									<!-- picture-->
 									<picture> 
-										<source type="image/avif" srcset="img/@2x/avif/certificateEl-1.avif"/>
 										<source type="image/webp" srcset="img/@2x/webp/certificateEl-1.webp"/><img src="img/@2x/certificateEl-1.jpg" alt="" loading="lazy"/>
 									</picture>
 									<!-- /picture--></span><span class="certificateEl__t">Сертификат официального дилера Kuppersbusch</span></a>
@@ -822,7 +815,6 @@
 								<div class="section-title__col col-lg-6"><a class="certificateEl" data-fancybox="sert" href="img/@2x/certificateEl-2.jpg"> <span class="certificateEl__img-wrap">
 									<!-- picture-->
 									<picture> 
-										<source type="image/avif" srcset="img/@2x/avif/certificateEl-2.avif"/>
 										<source type="image/webp" srcset="img/@2x/webp/certificateEl-2.webp"/><img src="img/@2x/certificateEl-2.jpg" alt="" loading="lazy"/>
 									</picture>
 									<!-- /picture--></span><span class="certificateEl__t">Сертификат официального дилера Brandt</span></a>
@@ -830,7 +822,6 @@
 								<div class="section-title__col col-lg-6"><a class="certificateEl" data-fancybox="sert" href="img/@2x/certificateEl-3.jpg"> <span class="certificateEl__img-wrap">
 									<!-- picture-->
 									<picture> 
-										<source type="image/avif" srcset="img/@2x/avif/certificateEl-3.avif"/>
 										<source type="image/webp" srcset="img/@2x/webp/certificateEl-3.webp"/><img src="img/@2x/certificateEl-3.jpg" alt="" loading="lazy"/>
 									</picture>
 									<!-- /picture--></span><span class="certificateEl__t">Сертификат официального дилера Kuppersbusch</span></a>
@@ -838,7 +829,6 @@
 								<div class="section-title__col col-lg-6"><a class="certificateEl" data-fancybox="sert" href="img/@2x/certificateEl-4.jpg"> <span class="certificateEl__img-wrap">
 									<!-- picture-->
 									<picture> 
-										<source type="image/avif" srcset="img/@2x/avif/certificateEl-4.avif"/>
 										<source type="image/webp" srcset="img/@2x/webp/certificateEl-4.webp"/><img src="img/@2x/certificateEl-4.jpg" alt="" loading="lazy"/>
 									</picture>
 									<!-- /picture--></span><span class="certificateEl__t">Сертификат официального дилера Brandt</span></a>
