--- a/mail/src/pages/basic.html
+++ b/mail/src/pages/basic.html
@@ -140,7 +140,7 @@ subject: My Basic Email Template Subject
           </div>
           <div class="table-block__body">
             <table>
-              <tr>
+              <tr class="border-bottom">
                 <td class="img-wrap">
                   <a href="#" class="prod-img">
                     <img src="https://megafronteam.github.io/0068Kitchen/public/img/@2x/cat-card-1.png" alt="">
@@ -154,7 +154,7 @@ subject: My Basic Email Template Subject
                 <td>  <div class="prod-price">189 999 руб.</div>  </td>
               </tr>
               
-              <tr>
+              <tr class="border-bottom">
                 <td>
                   <a href="#" class="prod-img">
                     <img src="https://megafronteam.github.io/0068Kitchen/public/img/@2x/cat-card-2.png" alt="">
@@ -167,7 +167,7 @@ subject: My Basic Email Template Subject
                 <td> <div class="prod-count">1 шт.</div> </td>
                 <td>  <div class="prod-price">3 шт.</div>  </td>
               </tr> 
-              <tr class="border-none">
+              <tr  >
                 <td><br><br></td>
                 </tr>
               <tr class="border-none">
