--- a/mail/src/pages/basic.html
+++ b/mail/src/pages/basic.html
@@ -6,7 +6,7 @@ subject: My Basic Email Template Subject
   <container>
     <row class="collapse">
       <columns small="6">
-        <img width="173" src="https://megafronteam.github.io/0068Kitchen/public/img/svg/logo.svg">
+        <img width="173" src="https://megafronteam.github.io/0068Kitchen/public/img/svg/logo.png">
       </columns>
       <columns small="6">
         <p class="text-right">
@@ -18,23 +18,23 @@ subject: My Basic Email Template Subject
     </row> 
     <div class="categories"> 
           <a href="#" class="categories__link">
-            <img src="https://megafronteam.github.io/0068Kitchen/public/img/svg/cat-email-1.svg" alt="">
+            <img src="https://megafronteam.github.io/0068Kitchen/public/img/svg/cat-email-1.png" alt="">
             Встраиваемая  <br> техника
           </a> 
           <a href="#" class="categories__link">
-            <img src="https://megafronteam.github.io/0068Kitchen/public/img/svg/cat-email-2.svg" alt="">
+            <img src="https://megafronteam.github.io/0068Kitchen/public/img/svg/cat-email-2.png" alt="">
             Вытяжки
           </a> 
           <a href="#" class="categories__link">
-            <img src="https://megafronteam.github.io/0068Kitchen/public/img/svg/cat-email-3.svg" alt="">
+            <img src="https://megafronteam.github.io/0068Kitchen/public/img/svg/cat-email-3.png" alt="">
             Крупная&nbsp;бытовая <br>  техника
           </a> 
           <a href="#" class="categories__link">
-            <img src="https://megafronteam.github.io/0068Kitchen/public/img/svg/cat-email-4.svg" alt="">
+            <img src="https://megafronteam.github.io/0068Kitchen/public/img/svg/cat-email-4.png" alt="">
             Мелкая&nbsp;кухонная <br>  техника
           </a> 
           <a href="#" class="categories__link">
-            <img src="https://megafronteam.github.io/0068Kitchen/public/img/svg/cat-email-5.svg" alt="">
+            <img src="https://megafronteam.github.io/0068Kitchen/public/img/svg/cat-email-5.png" alt="">
             Сантехника&nbsp;для <br>  кухни
           </a> 
     </container>
