--- a/mail/src/pages/basic.html
+++ b/mail/src/pages/basic.html
@@ -18,24 +18,24 @@ subject: My Basic Email Template Subject
     </row> 
     <div class="categories"> 
           <a href="#" class="categories__link">
-            <img src="https://megafronteam.github.io/0068Kitchen/public/img/svg/cat-email-1.png" alt="">
+            <img class="img" src="https://megafronteam.github.io/0068Kitchen/public/img/svg/cat-email-1.png" alt="">
             Встраиваемая  <br> техника
           </a> 
           <a href="#" class="categories__link">
-            <img src="https://megafronteam.github.io/0068Kitchen/public/img/svg/cat-email-2.png" alt="">
+            <img class="img" src="https://megafronteam.github.io/0068Kitchen/public/img/svg/cat-email-2.png" alt="">
             Вытяжки
           </a> 
           <a href="#" class="categories__link">
-            <img src="https://megafronteam.github.io/0068Kitchen/public/img/svg/cat-email-3.png" alt="">
-            Крупная&nbsp;бытовая <br>  техника
+            <img class="img" src="https://megafronteam.github.io/0068Kitchen/public/img/svg/cat-email-3.png" alt="">
+            Крупная бытовая <br>  техника
           </a> 
           <a href="#" class="categories__link">
-            <img src="https://megafronteam.github.io/0068Kitchen/public/img/svg/cat-email-4.png" alt="">
-            Мелкая&nbsp;кухонная <br>  техника
+            <img class="img" src="https://megafronteam.github.io/0068Kitchen/public/img/svg/cat-email-4.png" alt="">
+            Мелкая кухонная <br>  техника
           </a> 
           <a href="#" class="categories__link">
-            <img src="https://megafronteam.github.io/0068Kitchen/public/img/svg/cat-email-5.png" alt="">
-            Сантехника&nbsp;для <br>  кухни
+            <img class="img" src="https://megafronteam.github.io/0068Kitchen/public/img/svg/cat-email-5.png" alt="">
+            Сантехника для <br>  кухни
           </a> 
     </container>
   </div>
@@ -100,25 +100,31 @@ subject: My Basic Email Template Subject
                   
                 </div>
                 <div class="block-info__body">
-                  <div class="block-info__item">
-                    <img src="https://megafronteam.github.io/0068Kitchen/public/img/svg/mail-icon-1.svg" alt="">
-                    <div class="block-info__title"> Дата оформления</div>
-                    <h5>25 декабря, 14:30 </h5>
+                  <div class="row">
+
+                    <div class="block-info__item">
+                      <img src="https://megafronteam.github.io/0068Kitchen/public/img/svg/mail-icon-1.png" alt="">
+                      <div class="block-info__title"> Дата оформления</div>
+                      <h5>25 декабря, 14:30 </h5>
+                    </div>
+                    <div class="block-info__item">
+                      <img src="https://megafronteam.github.io/0068Kitchen/public/img/svg/mail-icon-2.png" alt="">
+                      <div class="block-info__title"> Способ оплаты</div>
+                      <h5>Картой онлайн </h5>
+                    </div>
                   </div>
-                  <div class="block-info__item">
-                    <img src="https://megafronteam.github.io/0068Kitchen/public/img/svg/mail-icon-2.svg" alt="">
-                    <div class="block-info__title"> Способ оплаты</div>
-                    <h5>Картой онлайн </h5>
-                  </div>
-                  <div class="block-info__item">
-                    <img src="https://megafronteam.github.io/0068Kitchen/public/img/svg/mail-icon-3.svg" alt="">
-                    <div class="block-info__title">Адрес доставки </div>
-                    <h5>ул. Зеленая, д.5, к.1 </h5>
-                  </div>
-                  <div class="block-info__item">
-                    <img src="https://megafronteam.github.io/0068Kitchen/public/img/svg/mail-icon-4.svg" alt="">
-                    <div class="block-info__title">СПОСОБ ДОСТАВКИ </div>
-                    <h5>Курьером CDEK </h5>
+                  <div class="row">
+
+                    <div class="block-info__item">
+                      <img src="https://megafronteam.github.io/0068Kitchen/public/img/svg/mail-icon-3.png" alt="">
+                      <div class="block-info__title">Адрес доставки </div>
+                      <h5>ул. Зеленая, д.5, к.1 </h5>
+                    </div>
+                    <div class="block-info__item">
+                      <img src="https://megafronteam.github.io/0068Kitchen/public/img/svg/mail-icon-4.png" alt="">
+                      <div class="block-info__title">СПОСОБ ДОСТАВКИ </div>
+                      <h5>Курьером CDEK </h5>
+                    </div>
                   </div>
 
                 </div>
