--- a/public/023-service-center.html
+++ b/public/023-service-center.html
@@ -838,7 +838,7 @@
 							</div>
 						</div>
 						<div class="col-12 col-xl-6">
-							<div class="sServicesList__card">
+							<div class="sServicesList__card sServicesList__card--indent-2">
 								<!-- picture-->
 								<picture> 
 									<source type="image/webp" srcset="img/@2x/webp/servicesCard-bg-4.webp"/><img src="img/@2x/servicesCard-bg-4.png" alt="" loading="lazy"/>
